# connect4-alphazero

./: .gitignore  CLAUDE.md  CLOUD_TRAINING.md  COLAB_TRAINING.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
configs/: batched_test.yaml  cloud.yaml  full.yaml  medium.yaml  medium_v2.yaml  parallel_test.yaml  small.yaml  tiny.yaml
models/: tiny.pt
notebooks/: analysis.ipynb  kaggle_local_test.ipynb
scripts/: benchmark_mcts.py  evaluate.py  export_onnx.py  kaggle_submit.py  play.py  train.py
src/agents/: __init__.py  alphazero_agent.py  base_agent.py  mcts_agent.py  minimax_agent.py  random_agent.py
src/export/: kaggle_agent.py  kaggle_agent_numpy.py  onnx_export.py
src/game/: board.py  constants.py
src/mcts/: search.py
src/neural_net/: model.py
src/training/: arena.py  coach.py  replay_buffer.py  self_play.py  trainer.py
src/utils/: config.py
tests/: conftest.py  test_agents.py  test_board.py  test_mcts.py  test_model.py  test_training.py
web/: ai_worker.js  game.js  index.html  style.css
web/models/: medium.onnx  tiny.onnx
