[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "connect4-alphazero"
version = "0.1.0"
description = "Connect 4 AI agent using AlphaZero-style reinforcement learning"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.0",
    "numpy>=1.24",
    "onnx>=1.14",
    "onnxruntime>=1.15",
    "pyyaml>=6.0",
    "tqdm>=4.65",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.3",
    "pytest-cov>=4.1",
]
kaggle = [
    "kaggle-environments>=1.12",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
